kubernetes/ocp-gpu/applications/inference-server/inference-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: interence-server
  annotations:
    haproxy.router.openshift.io/timeout=10m
spec:
  to:
    kind: Service
    name: inference-server
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
